Agrega integración RSS Feeds y Evernote
* Crea oauth_token a partir de autorización de usuario para identificarlo en Evernote
* Agrega registro de rssfeeds con opción para especificar libreta y tags que se crearán al momento de insertar las notas
* Consume RSS Feed y crea entries únicas para cada usuario
* Crea notas, permite el uso de imágenes
* Agrega configuración a nginx para agregar tolerancia a los timeouts de creación de notas
* Agrega variables de entorno para la sesión de flask y las variables requeridas por Evernote
* Agrega archivo con dependencias de python

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6.8-alpine3.9
+FROM python:3.8.6-alpine3.12
 
 LABEL MAINTAINER="Rigoberto Quezada isvaku@hotmail.com"
 
@@ -19,4 +19,4 @@ USER www
 
 EXPOSE 5000
 
-CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi"]
+CMD [ "gunicorn", "-w", "4", "--preload", "--log-level", "debug", "-t", "9999", "--keep-alive", "3", "--bind", "0.0.0.0:5000", "wsgi"]
