--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,19 @@ services:
             context: app
             dockerfile: Dockerfile
         container_name: flask
-        image: isvaku/flask-python:3.6
+        image: isvaku/evernote-python3
         restart: unless-stopped
         environment:
-            APP_ENV: "prod"
-            APP_DEBUG: "False"
+            APP_ENV: "dev"
+            APP_DEBUG: "True"
             APP_PORT: 5000
             MONGODB_DATABASE: flaskdb
             MONGODB_USERNAME: flaskuser
             MONGODB_PASSWORD: password
             MONGODB_HOSTNAME: mongodb
+            FLASK_SECRET_KEY: my-very-secret-key
+            EVERNOTE_CONSUMER_KEY: your_evernote_consumer_key
+            EVERNOTE_CONSUMER_SECRET: your_evernote_consumer_secret
         volumes:
             - appdata:/var/www
         depends_on:
@@ -48,9 +51,9 @@ services:
         container_name: webserver
         restart: unless-stopped
         environment:
-            APP_ENV: "prod"
+            APP_ENV: "dev"
             APP_NAME: "webserver"
-            APP_DEBUG: "true"
+            APP_DEBUG: "false"
             SERVICE_NAME: "webserver"
         ports:
             - "80:80"
