--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -9,8 +9,29 @@ server {
     access_log /var/log/nginx/access.log;
     client_max_body_size 64M;
 
+    uwsgi_read_timeout     3m;
+    uwsgi_send_timeout     3m;
+    uwsgi_connect_timeout  3m;
+    keepalive_timeout      3m;
+    send_timeout           3m;
+    proxy_read_timeout     3m;
+    proxy_connect_timeout  3m;
+    proxy_send_timeout     3m;
+
     location / {
         try_files $uri @proxy_to_app;
+    }
+
+    location /createNotesFromEntries {
+        try_files $uri @proxy_to_app;
+        uwsgi_read_timeout     3m;
+        uwsgi_send_timeout     3m;
+        uwsgi_connect_timeout  3m;
+        keepalive_timeout      3m;
+        send_timeout           3m;
+        proxy_read_timeout     3m;
+        proxy_connect_timeout  3m;
+        proxy_send_timeout     3m;
     }
 
     location @proxy_to_app {
