Modify nginx Dockerfile and config file to adapt to newest version

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,5 +1,5 @@
 upstream app_server {
-    server flask:5000;
+    server node:3000;
 }
 
 server {
@@ -22,7 +22,7 @@ server {
         try_files $uri @proxy_to_app;
     }
 
-    location /createNotesFromEntries {
+    location /rss/createNotesFromEntries {
         try_files $uri @proxy_to_app;
         uwsgi_read_timeout     3m;
         uwsgi_send_timeout     3m;
