--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,59 @@
 version: '3'
 services:
 
-    flask:
+    # flask:
+    #     build:
+    #         context: app
+    #         dockerfile: Dockerfile
+    #     container_name: flask
+    #     image: isvaku/evernote-python3
+    #     restart: unless-stopped
+    #     environment:
+    #         APP_ENV: "dev"
+    #         APP_DEBUG: "True"
+    #         APP_PORT: 5000
+    #         IS_CHINA: "False"
+    #         MONGODB_DATABASE: flaskdb
+    #         MONGODB_USERNAME: flaskuser
+    #         MONGODB_PASSWORD: password
+    #         MONGODB_HOSTNAME: mongodb
+    #         FLASK_SECRET_KEY: my-very-secret-key
+    #         EVERNOTE_CONSUMER_KEY: your_evernote_consumer_key
+    #         EVERNOTE_CONSUMER_SECRET: your_evernote_consumer_secret
+    #     volumes:
+    #         - appdata:/var/www
+    #     depends_on:
+    #         - mongodb
+    #     networks:
+    #         - frontend
+    #         - backend
+
+    node:
         build:
-            context: app
+            context: app_node
             dockerfile: Dockerfile
-        container_name: flask
-        image: isvaku/evernote-python3
+        container_name: node
+        image: isvaku/node-evernote-api
         restart: unless-stopped
         environment:
-            APP_ENV: "dev"
-            APP_DEBUG: "True"
-            APP_PORT: 5000
-            IS_CHINA: "False"
-            MONGODB_DATABASE: flaskdb
+            PORT: 3000
+            PROXY_PORT: 80
+            PROXY_HOST: "localhost"
+            HOST: "node"
+            TOKEN_EXPIRETIME: 3600
+            TOKEN_ISSUER: "isvaku"
+            TOKEN_SECRET: "my-very-secret-key"
+            SANDBOX: true
+            CHINA: false
+            API_CONSUMER_KEY: your_evernote_consumer_key
+            API_CONSUMER_SECRET: your_evernote_consumer_secret
+            MONGODB_PORT: 27017
             MONGODB_USERNAME: flaskuser
             MONGODB_PASSWORD: password
             MONGODB_HOSTNAME: mongodb
-            FLASK_SECRET_KEY: my-very-secret-key
-            EVERNOTE_CONSUMER_KEY: your_evernote_consumer_key
-            EVERNOTE_CONSUMER_SECRET: your_evernote_consumer_secret
+            MONGODB_DATABASE: flaskdb
         volumes:
-            - appdata:/var/www
+            - nodeappdata:/usr/app
         depends_on:
             - mongodb
         networks:
@@ -62,7 +94,7 @@ services:
         volumes:
             - nginxdata:/var/log/nginx
         depends_on:
-            - flask
+            - node
         networks:
             - frontend
 
@@ -89,9 +121,9 @@ networks:
 volumes:
     mongodbdata:
         driver: local
-    appdata:
-        driver: local
+    # appdata:
+    #     driver: local
     nginxdata:
         driver: local
-    # crondata:
-    #     driver: local
+    nodeappdata:
+        driver: local
