Changes image from node app for better compatibility with arm64

--- a/app_node/Dockerfile
+++ b/app_node/Dockerfile
@@ -12,7 +12,7 @@ COPY --from=ts-compiler /usr/app/package*.json ./
 COPY --from=ts-compiler /usr/app/dist ./
 RUN npm install --only=production
 
-FROM gcr.io/distroless/nodejs:14
+FROM node:14-alpine3.10
 WORKDIR /usr/app
 COPY --from=ts-remover /usr/app ./
 USER 1000
