Add debugging for Node container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
             MONGODB_PASSWORD: password
             MONGODB_HOSTNAME: mongodb
             MONGODB_DATABASE: flaskdb
+        ports:
+            - "9229:9229"
         volumes:
             - nodeappdata:/usr/app
         depends_on:
