--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,17 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"type": "pwa-chrome",
-			"request": "launch",
-			"name": "Launch Chrome against localhost",
-			"url": "http://localhost:8080",
-			"webRoot": "${workspaceFolder}"
-		}
-	]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Docker: Attach to Node",
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "port": 9229,
+      "address": "localhost",
+      "localRoot": "${workspaceFolder}/app_node/src",
+      "remoteRoot": "/usr/app/src",
+      "protocol": "inspector",
+      "sourceRoot": "${workspaceFolder}/src"
+    }
+  ]
 }
