--- a/app_node/package.json
+++ b/app_node/package.json
@@ -7,7 +7,7 @@
         "start": "run-p -l type-check:watch start:dev",
         "type-check:watch": "npm run type-check -- --watch",
         "type-check": "tsc --noEmit",
-        "start:dev": "nodemon --trace-warnings --exec babel-node --extensions \".ts\" src/index.ts",
+        "start:dev": "nodemon --trace-warnings --inspect=0.0.0.0:9229 --exec babel-node --extensions \".ts\" src/index.ts",
         "clean": "rimraf dist",
         "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\"",
         "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps",
