--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         image: isvaku/node-evernote-api
         restart: unless-stopped
         environment:
+            TZ: America/Mexico_City
             PORT: 3000
             PROXY_PORT: 80
             PROXY_HOST: "localhost"
@@ -68,6 +69,7 @@ services:
         restart: unless-stopped
         command: mongod --auth
         environment:
+            TZ: America/Mexico_City
             MONGO_INITDB_ROOT_USERNAME: mongodbuser
             MONGO_INITDB_ROOT_PASSWORD: your_mongodb_root_password
             MONGO_INITDB_DATABASE: flaskdb
@@ -86,6 +88,7 @@ services:
         container_name: webserver
         restart: unless-stopped
         environment:
+            TZ: America/Mexico_City
             APP_ENV: "dev"
             APP_NAME: "webserver"
             APP_DEBUG: "false"
