--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,24 @@ services:
         networks: 
             - frontend
 
+    mongo_express:
+        image: mongo-express
+        container_name: mongo_express
+        restart: unless-stopped
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_OPTIONS_EDITORTHEME: 3024-night
+            ME_CONFIG_BASICAUTH_USERNAME: mongoexpress
+            ME_CONFIG_BASICAUTH_PASSWORD: mongoexpress
+            ME_CONFIG_MONGODB_ADMINUSERNAME: mongodbuser
+            ME_CONFIG_MONGODB_ADMINPASSWORD: your_mongodb_root_password
+            ME_CONFIG_MONGODB_SERVER: mongodb
+        networks: 
+            - backend
+        depends_on: 
+            - mongodb    
+
 networks:
     frontend:
         driver: bridge
