Switch debug port to Dev docker-compose file

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,8 @@ services:
             MONGODB_PASSWORD: password
             MONGODB_HOSTNAME: mongodb
             MONGODB_DATABASE: flaskdb
+        ports:
+            - "9229:9229"
 
     mongodb:
         environment:
