Add packages, sendEmail util and email templates
Add

* Handlebars
* Nodemailer
* Express-async-handle

Add templates for:

* Signup
* Password reset request
* Password reset success

--- a/app_node/package.json
+++ b/app_node/package.json
@@ -29,6 +29,7 @@
         "@types/jsonwebtoken": "^8.5.5",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^16.3.1",
+        "@types/nodemailer": "^6.4.4",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-minify": "^0.5.1",
         "nodemon": "^2.0.12",
@@ -43,9 +44,11 @@
         "core-js": "^3.18.3",
         "evernote": "^2.0.5",
         "express": "^4.17.1",
+        "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.9",
         "node-html-parser": "^4.0.0",
+        "nodemailer": "^6.7.3",
         "regenerator-runtime": "^0.13.9",
         "rss-parser": "^3.12.0",
         "validator": "^13.6.0"
