--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,10 @@ services:
             MONGODB_PASSWORD: password
             MONGODB_HOSTNAME: mongodb
             MONGODB_DATABASE: flaskdb
+            NODEMAILER_HOST: smtp.mail.com
+            NODEMAILER_PORT: 587    
+            NODEMAILER_USERNAME: example@mail.com
+            NODEMAILER_PASSWORD: password
         ports:
             - "9229:9229"
 
