--- a/app_node/package.json
+++ b/app_node/package.json
@@ -44,6 +44,7 @@
         "core-js": "^3.18.3",
         "evernote": "^2.0.5",
         "express": "^4.17.1",
+        "express-async-handler": "^1.2.0",
         "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.9",
