Add config data from ENV

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,6 +26,7 @@ services:
             NODEMAILER_PORT: 587    
             NODEMAILER_USERNAME: example@mail.com
             NODEMAILER_PASSWORD: password
+            BCRYPT_SALT: 10
         ports:
             - "9229:9229"
 
