--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,9 @@ services:
             BCRYPT_SALT: 10
         ports:
             - "9229:9229"
+        volumes:
+            - ./app_node:/usr/app
+            - nodemodules:/usr/app/node_modules
 
     mongodb:
         environment:
@@ -52,3 +55,6 @@ services:
             ME_CONFIG_MONGODB_ADMINUSERNAME: mongodbuser
             ME_CONFIG_MONGODB_ADMINPASSWORD: your_mongodb_root_password
             ME_CONFIG_MONGODB_SERVER: mongodb
+
+volumes:
+    nodemodules: {}
