--- a/app_node/package.json
+++ b/app_node/package.json
@@ -40,12 +40,14 @@
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "await-to-js": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "core-js": "^3.18.3",
         "evernote": "^2.0.5",
         "express": "^4.17.1",
         "express-async-handler": "^1.2.0",
         "handlebars": "^4.7.7",
+        "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.9",
         "node-html-parser": "^4.0.0",
