--- a/app_node/package.json
+++ b/app_node/package.json
@@ -11,7 +11,8 @@
         "clean": "rimraf dist",
         "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\"",
         "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps",
-        "build": "run-p -l type-check build:prod"
+        "build": "run-p -l type-check build:prod",
+        "lint": "eslint . --ext .ts --fix"
     },
     "keywords": [],
     "author": "",
@@ -30,8 +31,12 @@
         "@types/mongoose": "^5.11.97",
         "@types/node": "^16.3.1",
         "@types/nodemailer": "^6.4.4",
+        "@typescript-eslint/eslint-plugin": "^5.32.0",
+        "@typescript-eslint/parser": "^5.32.0",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-minify": "^0.5.1",
+        "eslint": "^8.21.0",
+        "eslint-config-google": "^0.14.0",
         "nodemon": "^2.0.12",
         "npm-run-all": "^4.1.5",
         "prettier": "2.4.1",
