--- a/app_node/package.json
+++ b/app_node/package.json
@@ -9,8 +9,8 @@
         "type-check": "tsc --noEmit",
         "start:dev": "nodemon --legacy-watch --trace-warnings --inspect=0.0.0.0:9229 --exec babel-node --extensions \".ts\" src/index.ts",
         "clean": "rimraf dist",
-        "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\"",
-        "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps",
+        "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --copy-files",
+        "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps --copy-files",
         "build": "run-p -l type-check build:prod",
         "lint": "eslint . --ext .ts --fix"
     },
