--- a/app_node/package.json
+++ b/app_node/package.json
@@ -9,9 +9,10 @@
         "type-check": "tsc --noEmit",
         "start:dev": "nodemon --legacy-watch --trace-warnings --inspect=0.0.0.0:9229 --exec babel-node --extensions \".ts\" src/index.ts",
         "clean": "rimraf dist",
-        "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\"",
-        "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps",
-        "build": "run-p -l type-check build:prod"
+        "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --copy-files",
+        "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/**/*.spec.ts\" --extensions \".ts\" --source-maps --copy-files",
+        "build": "run-p -l type-check build:prod",
+        "lint": "eslint . --ext .ts --fix"
     },
     "keywords": [],
     "author": "",
@@ -30,8 +31,12 @@
         "@types/mongoose": "^5.11.97",
         "@types/node": "^16.3.1",
         "@types/nodemailer": "^6.4.4",
+        "@typescript-eslint/eslint-plugin": "^5.32.0",
+        "@typescript-eslint/parser": "^5.32.0",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-minify": "^0.5.1",
+        "eslint": "^8.21.0",
+        "eslint-config-google": "^0.14.0",
         "nodemon": "^2.0.12",
         "npm-run-all": "^4.1.5",
         "prettier": "2.4.1",
@@ -40,12 +45,14 @@
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "await-to-js": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "core-js": "^3.18.3",
         "evernote": "^2.0.5",
         "express": "^4.17.1",
         "express-async-handler": "^1.2.0",
         "handlebars": "^4.7.7",
+        "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.9",
         "node-html-parser": "^4.0.0",
